registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: container-registry
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: registry
  type: ClusterIP
